[gd_scene load_steps=11 format=3 uid="uid://bl55oir1xhn6s"]

[ext_resource type="Texture2D" uid="uid://c7kfakm0vm8ce" path="res://Assets/Sprite Pack 2/7 - Rocket Cherry/Hopping (16 x 32).png" id="1_3qgvg"]
[ext_resource type="Script" uid="uid://b8t5rypdk5sni" path="res://Script/cherry.gd" id="1_iyo06"]
[ext_resource type="Texture2D" uid="uid://b7mfd73hn5fh2" path="res://Assets/Sprite Pack 2/7 - Rocket Cherry/Hurt (16 x 32).png" id="2_or23n"]
[ext_resource type="PackedScene" uid="uid://r74soxqu5io5" path="res://Itens/hitbox.tscn" id="3_0w8d7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5yqlq"]
atlas = ExtResource("1_3qgvg")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwpmu"]
atlas = ExtResource("1_3qgvg")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oca2d"]
atlas = ExtResource("2_or23n")
region = Rect2(0, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ecbic"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yqlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwpmu")
}],
"loop": true,
"name": &"hopping",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oca2d")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hxbww"]
radius = 3.5
height = 10.6667

[sub_resource type="RectangleShape2D" id="RectangleShape2D_31pmu"]
size = Vector2(8, 3)

[node name="cherry" type="CharacterBody2D"]
position = Vector2(0, -60)
scale = Vector2(4, 4)
collision_layer = 4
collision_mask = 7
up_direction = Vector2(0, 1)
script = ExtResource("1_iyo06")

[node name="animation_enemy" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ecbic")
animation = &"hopping"
autoplay = "hopping"

[node name="collision_cherry" type="CollisionShape2D" parent="."]
position = Vector2(0, 10.6667)
rotation = -1.57079
shape = SubResource("CapsuleShape2D_hxbww")

[node name="wall_detecty" type="RayCast2D" parent="."]
position = Vector2(0, 10.25)
target_position = Vector2(-7, 0)
collision_mask = 6

[node name="hitbox" parent="." instance=ExtResource("3_0w8d7")]

[node name="collision_hitbox" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_31pmu")
debug_color = Color(0.721569, 0, 0.027451, 0.419608)

[node name="cherry_visible" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(0, 5.875)
scale = Vector2(1, 0.9375)

[connection signal="screen_exited" from="cherry_visible" to="." method="_on_cherry_visible_screen_exited"]
